force-app/main/default/objects/IntegrationEnablement__mdt/IntegrationEnablement__mdt.object-meta.xml
<CustomObject>
    <label>Integration Enablement</label>
    <pluralLabel>Integration Enablement</pluralLabel>
</CustomObject>