force-app/main/default/objects/IntegrationEnablement__mdt/fields/Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Integration_Setting__c</fullName>
    <label>Integration Setting</label>
    <referenceTo>IntegrationSetting__mdt</referenceTo>
    <relationshipLabel>Integration Enablement</relationshipLabel>
    <relationshipName>Integration_Enablement</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>